--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.3.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0",
     "express": "^4.21.2",
     "pg": "^8.13.1",
+    "prisma": "^6.3.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
