--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
-node_modules
-dist
-.env
-
+# Dependencies
+node_modules/
 package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+
+# Prisma
+prisma/*.db
+prisma/migrations/
+
+# Temporary files
+tmp/
+temp/
+
+# Production
+.vercel
+.next
