--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@prisma/client": "^6.3.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "pg": "^8.13.1",
     "prisma": "^6.3.0",
