--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0",
-    "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "pg": "^8.13.1",
@@ -25,5 +25,11 @@
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0",
+    "prettier": "^3.4.2"
   }
 }
