--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
+  "name": "mercadex",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "npm run lint:frontend && npm run lint:backend",
+    "lint:frontend": "cd frontend && npm run lint",
+    "lint:backend": "cd backend && npm run lint",
     "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   },
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^15.4.3"
+  },
+  "lint-staged": {
+    "frontend/**/*.{ts,tsx}": [
+      "cd frontend && eslint --fix",
+      "cd frontend && prettier --write"
+    ],
+    "backend/**/*.{ts}": [
+      "cd backend && eslint --fix",
+      "cd backend && prettier --write"
+    ]
   }
 }
