--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "lint-staged": {
     "frontend/**/*.{ts,tsx}": [
-      "cd frontend && eslint --fix",
-      "cd frontend && prettier --write"
+      "eslint --fix",
+      "prettier --write"
     ],
-    "backend/**/*.{ts}": [
-      "cd backend && eslint --fix",
-      "cd backend && prettier --write"
+    "backend/**/*.ts": [
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
